--- a/test/test.css
+++ b/test/test.css
@@ -35,18 +35,21 @@
   position: relative;
 }
 
-#placed1 .stamp {
+#placed1 .stamp,
+#placed3 .stamp {
   position: absolute;
 }
 
-#placed1 .stamp1 {
+#placed1 .stamp1,
+#placed3 .stamp1 {
   width: 30px;
   height: 25px;
   left: 22px;
   top: 10px;
 }
 
-#placed1 .stamp2 {
+#placed1 .stamp2,
+#placed3 .stamp2 {
   width: 10px;
   height: 45px;
   left: 3px;
