add extra big tests

--- a/test/test.css
+++ b/test/test.css
@@ -21,6 +21,7 @@
 .item.h2 { height: 38px; }
 .item.w4 { width:  78px; }
 .item.h4 { height: 78px; }
+.item.w5 { width:  98px; }
 
 .gridded .grid-sizer {
   width: 30px;
