--- a/examples/css/examples.css
+++ b/examples/css/examples.css
@@ -14,6 +14,12 @@ body {
   background: #EEE;
 }
 
+.container-h {
+  height: 500px;
+  margin-bottom: 20px;
+  background: #EEE;
+}
+
 .item {
   float: left;
   width: 50px;
